fixing stuff intellij complains is deprecated.